turns working, need to implement enemy and player death - re-entering the openworld

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
       "no-unused-vars": "off"
     },
     "globals": {
-
+      "Clickable": true,
+      
       "width": true,
       "height": true,
       "drawingContext": true,
